--- a/trunk/sfox/configure.in
+++ b/trunk/sfox/configure.in
@@ -1,3 +1,4 @@
+dnl TODO: linpng needs -lz -lbz2 on Madrake
 AC_INIT(src/game/starmain.c)
 
 dnl Detect the canonical host and target build environment
@@ -18,19 +19,19 @@ AC_CHECK_HEADERS([string.h])
 AC_CHECK_FUNCS([memset])
 
 dnl Checks for SDL.
-AM_PATH_SDL([$REQUIRED_SDL_VERSION],, AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
+AM_PATH_SDL([$REQUIRED_SDL_VERSION],, [AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])])
 
 dnl Checks for glib
-AM_PATH_GLIB_2_0([$REQUIRED_GLIB2_VERSION],, AC_MSG_ERROR([*** GLIB-2 version too old]))
+AM_PATH_GLIB_2_0([$REQUIRED_GLIB2_VERSION],, [AC_MSG_ERROR([*** GLIB-2 version too old])])
 
 dnl Checks for freetype2
-AC_CHECK_FT2([$REQUIRED_FREETYPE2_VERSION],, AC_MSG_ERROR([*** FREETYPE2 version too old]))
+AC_CHECK_FT2([$REQUIRED_FREETYPE2_VERSION],, [AC_MSG_ERROR([*** FREETYPE2 version too old])])
 
 dnl Check for SDL_image
-AC_CHECK_LIB(SDL_image, IMG_Load,SDL_LIBS="$SDL_LIBS -lSDL_image",  AC_MSG_ERROR(*** SDL_image not found))
+AC_CHECK_LIB(SDL_image, IMG_Load,SDL_LIBS="$SDL_LIBS -lSDL_image", [AC_MSG_ERROR(*** SDL_image not found)])
 
 dnl Check for libpng
-AC_CHECK_LIB(png, png_init_io,,  AC_MSG_ERROR(*** libpng not found))
+AC_CHECK_LIB(png, png_init_io,, [AC_MSG_ERROR(*** libpng not found)])
 
 dnl Figure out which math and gl library to use
 case "$target" in
@@ -53,11 +54,17 @@ esac
 AC_SUBST(MATHLIB)
 
 dnl Check for opengl libraries
-AC_CHECK_LIB($SYS_GL_LIB, glBegin,[ OPENGL_LIBS="-l$SYS_GL_LIB $OPENGL_LIBS" ], AC_MSG_ERROR(OpenGL is not installed: missing $SYS_GL_LIB library))
-AC_CHECK_LIB($SYS_GLU_LIB, gluPerspective,[ OPENGL_LIBS="$OPENGL_LIBS -l$SYS_GLU_LIB" ], [ AC_MSG_ERROR(OpenGL is not installed: missing $SYS_GLU_LIB library)], [$OPENGL_LIBS])
+AC_CHECK_LIB($SYS_GL_LIB, glBegin,[ OPENGL_LIBS="-l$SYS_GL_LIB $OPENGL_LIBS" ], [AC_MSG_ERROR(OpenGL is not installed: missing $SYS_GL_LIB library)])
+AC_CHECK_LIB($SYS_GLU_LIB, gluPerspective,[ OPENGL_LIBS="$OPENGL_LIBS -l$SYS_GLU_LIB" ], [AC_MSG_ERROR(OpenGL is not installed: missing $SYS_GLU_LIB library)], [$OPENGL_LIBS])
 
 AC_SUBST(OPENGL_LIBS)
 AC_SUBST(OPENGL_FLAGS)
+
+CFLAGS="$CFLAGS -Wall"
+
+dnl Enable debug or profiling
+AC_ARG_ENABLE(debugging, [  --enable-debug          Compile with debug symbols ], CFLAGS="$CFLAGS -g")
+AC_ARG_ENABLE(profiling, [  --enable-profiling      Compile with profiling enabled ], CFLAGS="$CFLAGS -g -pg")
 
 dnl Checks for header files.
 AC_HEADER_STDC
