--- a/trunk/sfox/src/game/Makefile.am
+++ b/trunk/sfox/src/game/Makefile.am
@@ -1,5 +1,5 @@
 CFLAGS=@SDL_CFLAGS@ @X_CFLAGS@ @CFLAGS@ @FT2_CFLAGS@
-LIBS=@SDL_LIBS@ @OPENGL_LIBS@ @X_LIBS@ @GLIB_LIBS@ @FT2_LIBS@
+LIBS=@SDL_LIBS@ @OPENGL_LIBS@ @X_LIBS@ @GLIB_LIBS@ @FT2_LIBS@ @LIBS@
 INCLUDES=-I$(top_srcdir)/src/starengine/framework -I$(top_srcdir)/src/starengine/engine -I$(top_srcdir)/src/starengine/math  -I$(top_srcdir)/src/starengine/engine/opengl
 
 bin_PROGRAMS=starmain
