--- a/trunk/sfox/configure.in
+++ b/trunk/sfox/configure.in
@@ -33,15 +33,16 @@ AC_CHECK_LIB(SDL_image, IMG_Load,SDL_LIBS="$SDL_LIBS -lSDL_image", [AC_MSG_ERROR
 dnl Check for libpng
 AC_CHECK_LIB(m, pow)
 AC_CHECK_LIB(z, gzopen)
-AC_CHECK_LIB(bz2, BZ2_bzCompressInit)
-AC_CHECK_LIB(png, png_init_io,, [AC_MSG_ERROR(*** libpng not found)], [-lz -lbz2])
+#AC_CHECK_LIB(bz2, BZ2_bzCompressInit)
+AC_CHECK_LIB(png, png_init_io,, [AC_MSG_ERROR(*** libpng not found)], [-lz])
 
 dnl Figure out which math and gl library to use
 case "$target" in
     *-*-cygwin* | *-*-mingw32*)
+	windows=yes
         MATHLIB=""
         SYS_GL_LIB="opengl32"
-        SYS_GLU_LIB="openglu32"
+        SYS_GLU_LIB="glu32"
         ;;
     *)
         dnl Checks for x11
@@ -56,9 +57,46 @@ case "$target" in
 esac
 AC_SUBST(MATHLIB)
 
-dnl Check for opengl libraries
-AC_CHECK_LIB($SYS_GL_LIB, glBegin,[ OPENGL_LIBS="-l$SYS_GL_LIB $OPENGL_LIBS" ], [AC_MSG_ERROR(OpenGL is not installed: missing $SYS_GL_LIB library)])
-AC_CHECK_LIB($SYS_GLU_LIB, gluPerspective,[ OPENGL_LIBS="$OPENGL_LIBS -l$SYS_GLU_LIB" ], [AC_MSG_ERROR(OpenGL is not installed: missing $SYS_GLU_LIB library)], [$OPENGL_LIBS])
+dnl Check for opengl and glu
+AC_LANG_C
+OLDLIBS=$LIBS
+LIBS="-l$SYS_GL_LIB $OPENGL_LIBS $LIBS"
+AC_MSG_CHECKING([opengl])
+AC_TRY_LINK([
+#ifdef _WIN32
+#include <windows.h>
+#include <GL/gl.h>
+#else
+char glEnd();
+#endif
+], [ glEnd(); ], has_opengl="yes", has_opengl="")
+if test x$has_opengl != x; then
+   AC_MSG_RESULT([yes])
+   OPENGL_LIBS="-l$SYS_GL_LIB $OPENGL_LIBS"
+else
+   AC_MSG_RESULT([no])
+   AC_MSG_ERROR(OpenGL is not installed: missing $SYS_GL_LIB library)
+fi
+dnl Same test for glu
+LIBS="-l$SYS_GLU_LIB $LIBS"
+AC_MSG_CHECKING([glu])
+AC_TRY_LINK([
+#ifdef _WIN32
+#include <windows.h>
+#include <GL/gl.h>
+#include <GL/glu.h>
+#else
+char gluTessBeginContour(void *p);
+#endif
+], [ gluTessBeginContour(0); ], has_glu="yes", has_glu="")
+if test x$has_glu != x; then
+   AC_MSG_RESULT([yes])
+   OPENGL_LIBS="$OPENGL_LIBS -l$SYS_GLU_LIB"
+else
+   AC_MSG_RESULT([no])
+   AC_MSG_ERROR(Glu is not installed: missing $SYS_GLU_LIB library)
+fi
+LIBS=$OLDLIBS
 
 AC_SUBST(OPENGL_LIBS)
 AC_SUBST(OPENGL_FLAGS)
