--- a/trunk/sfox/configure.in
+++ b/trunk/sfox/configure.in
@@ -10,7 +10,6 @@ AC_PROG_RANLIB
 AC_PROG_CC
 
 REQUIRED_SDL_VERSION=1.2.0
-REQUIRED_GLIB2_VERSION=2.0.0
 REQUIRED_FREETYPE2_VERSION=2.0.0
 
 AC_C_CONST
@@ -19,9 +18,6 @@ AC_CHECK_FUNCS([memset])
 
 dnl Checks for SDL.
 AM_PATH_SDL([$REQUIRED_SDL_VERSION],, [AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])])
-
-dnl Checks for glib
-AM_PATH_GLIB_2_0([$REQUIRED_GLIB2_VERSION],, [AC_MSG_ERROR([*** GLIB-2 version too old])])
 
 dnl Checks for freetype2
 AC_CHECK_FT2([$REQUIRED_FREETYPE2_VERSION],, [AC_MSG_ERROR([*** FREETYPE2 version too old])])
@@ -32,16 +28,17 @@ AC_CHECK_LIB(SDL_image, IMG_Load,SDL_LIBS="$SDL_LIBS -lSDL_image", [AC_MSG_ERROR
 dnl Check for libpng
 AC_CHECK_LIB(m, pow)
 AC_CHECK_LIB(z, gzopen)
-#AC_CHECK_LIB(bz2, BZ2_bzCompressInit)
-AC_CHECK_LIB(png, png_init_io,, [AC_MSG_ERROR(*** libpng not found)], [-lz])
+AC_CHECK_LIB(png, png_init_io,, [AC_MSG_ERROR(*** libpng not found)], [-lz -lm])
 
 dnl Figure out which math and gl library to use
+TARGETS="starmain"
 case "$target" in
     *-*-cygwin* | *-*-mingw32*)
 	windows=yes
         MATHLIB=""
         SYS_GL_LIB="opengl32"
         SYS_GLU_LIB="glu32"
+	TARGETS="starmain.exe"
         ;;
     *)
         dnl Checks for x11
@@ -55,6 +52,8 @@ case "$target" in
         ;;
 esac
 AC_SUBST(MATHLIB)
+dnl TARGETS will be starmain.exe if we are compiling for win32
+AC_SUBST(TARGETS)
 
 dnl Check for opengl and glu
 AC_LANG_C
@@ -116,5 +115,6 @@ AC_OUTPUT([Makefile \
 	src/starengine/framework/Makefile \
 	src/starengine/engine/Makefile \
 	src/starengine/math/Makefile \
+	src/starengine/starutils/Makefile \
 	src/utils/Makefile \
-	src/utils/raw2png/Makefile])
+	src/utils/raw2png/Makefile ])
