--- a/trunk/sfox/src/starengine/starutils/Makefile.am
+++ b/trunk/sfox/src/starengine/starutils/Makefile.am
@@ -1,4 +1,4 @@
 CFLAGS=@CFLAGS@
 noinst_LIBRARIES=libstarutils.a
 INCLUDES=
-libstarutils_a_SOURCES=starlist.c
+libstarutils_a_SOURCES=starlist.c stararray.c
