--- a/trunk/frameworkedGL/SConstruct
+++ b/trunk/frameworkedGL/SConstruct
@@ -35,13 +35,15 @@ if sys.platform == 'linux2' or sys.platform == 'linux-i386':
 	framework_libpath = ['#lib']
 	framework_include = ['#include']
 
-env = Environment(CCFLAGS = '-g')
+env = Environment(CXXFLAGS = '-g')
 env.Append(CPPPATH = framework_include+z_include+sdl_image_include+sdl_include+opengl_include+freetype_include)
 env.Append(LIBS = framework_lib+z_lib+sdl_image_lib+sdl_lib+opengl_lib+freetype_lib)
 env.Append(LIBPATH = framework_libpath+z_libpath+sdl_image_libpath+sdl_libpath+opengl_libpath+freetype_libpath)
 
-SConscript('framework/SConscript', build_dir='build')
-SConscript('reflection/SConscript', exports = 'env')
-SConscript('pbuffer/SConscript', exports = 'env')
-SConscript('ztest/SConscript', exports = 'env')
-SConscript('perpixellight/SConscript', exports = 'env')
+SConscript('framework/SConscript', build_dir='build', exports = 'env')
+#SConscript('reflection/SConscript', exports = 'env')
+#SConscript('pbuffer/SConscript', exports = 'env')
+#SConscript('ztest/SConscript', exports = 'env')
+#SConscript('perpixellight/SConscript', exports = 'env')
+SConscript('testTexture/SConscript', exports = 'env')
+SConscript('volrend/SConscript', exports = 'env')
