--- a/trunk/frameworkedGL/VSNet/frameworkGL/frameworkGL.vcproj
+++ b/trunk/frameworkedGL/VSNet/frameworkGL/frameworkGL.vcproj
@@ -123,6 +123,9 @@
 				RelativePath="..\..\framework\src\opengl\imageloader.cpp">
 			</File>
 			<File
+				RelativePath="..\..\framework\src\opengl\imageloader_dat.cpp">
+			</File>
+			<File
 				RelativePath="..\..\framework\src\opengl\light.cpp">
 			</File>
 			<File
@@ -154,6 +157,9 @@
 			</File>
 			<File
 				RelativePath="..\..\framework\src\opengl\texture2d.cpp">
+			</File>
+			<File
+				RelativePath="..\..\framework\src\opengl\texture3d.cpp">
 			</File>
 			<File
 				RelativePath="..\..\framework\src\opengl\texturemanager.cpp">
@@ -200,6 +206,9 @@
 				RelativePath="..\..\framework\src\opengl\imageloader.h">
 			</File>
 			<File
+				RelativePath="..\..\framework\src\opengl\imageloader_dat.h">
+			</File>
+			<File
 				RelativePath="..\..\framework\src\opengl\light.h">
 			</File>
 			<File
@@ -237,6 +246,9 @@
 			</File>
 			<File
 				RelativePath="..\..\framework\src\opengl\texture2d.h">
+			</File>
+			<File
+				RelativePath="..\..\framework\src\opengl\texture3d.h">
 			</File>
 			<File
 				RelativePath="..\..\framework\src\opengl\texturemanager.h">
