--- a/trunk/frameworkedGL/SConstruct
+++ b/trunk/frameworkedGL/SConstruct
@@ -26,6 +26,8 @@ if sys.platform == 'linux2' or sys.platform == 'linux-i386':
 	sdl_image_include = sdl_include
 	sdl_image_libpath = sdl_libpath
 	sdl_image_lib = ['SDL_image']
+	#CG
+	cg_lib = ['Cg', 'CgGL']
 	#z lib
 	z_lib = ['z']
 	z_libpath = ['/usr/lib']
@@ -37,7 +39,7 @@ if sys.platform == 'linux2' or sys.platform == 'linux-i386':
 
 env = Environment(CXXFLAGS = '-g')
 env.Append(CPPPATH = framework_include+z_include+sdl_image_include+sdl_include+opengl_include+freetype_include)
-env.Append(LIBS = framework_lib+z_lib+sdl_image_lib+sdl_lib+opengl_lib+freetype_lib)
+env.Append(LIBS = framework_lib+z_lib+sdl_image_lib+sdl_lib+opengl_lib+freetype_lib+cg_lib)
 env.Append(LIBPATH = framework_libpath+z_libpath+sdl_image_libpath+sdl_libpath+opengl_libpath+freetype_libpath)
 
 SConscript('framework/SConscript', build_dir='build', exports = 'env')
