--- a/trunk/frameworkedGL/SConstruct
+++ b/trunk/frameworkedGL/SConstruct
@@ -49,3 +49,4 @@ SConscript('framework/SConscript', exports = 'env')
 SConscript('testTexture/SConscript', exports = 'env')
 SConscript('testCG/SConscript', exports = 'env')
 SConscript('volrend/SConscript', exports = 'env')
+SConscript('volrendCG/SConscript', exports = 'env')
