--- a/trunk/frameworkedGL/VSNet/volrendCG/volrendCG.vcproj
+++ b/trunk/frameworkedGL/VSNet/volrendCG/volrendCG.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="testTexture"
-	ProjectGUID="{9BF0D7C1-E64E-4A10-A17E-C3B5800AA0A9}"
+	Name="volrendCG"
+	ProjectGUID="{41BC5994-9D21-41AC-8C1F-873CB1EB74BA}"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -23,7 +23,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
@@ -33,13 +33,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="frameworkGL.lib opengl32.lib glu32.lib libfreetype.lib SDL.lib SDL_image.lib SDLmain.lib cg.lib cgGL.lib"
-				OutputFile="$(OutDir)/testTexture.exe"
+				OutputFile="$(OutDir)/volrendCG.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\frameworkGL\Debug"
-				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames="msvcrt.lib msvcrtd.lib"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/testTexture.pdb"
+				ProgramDatabaseFile="$(OutDir)/volrendCG.pdb"
 				SubSystem="2"
 				TargetMachine="1"/>
 			<Tool
@@ -83,7 +82,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="frameworkGL.lib opengl32.lib glu32.lib libfreetype.lib SDL.lib SDL_image.lib SDLmain.lib cg.lib cgGL.lib"
-				OutputFile="$(OutDir)/testTexture.exe"
+				OutputFile="$(OutDir)/volrendCG.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\frameworkGL\Release"
 				IgnoreDefaultLibraryNames="msvcrt.lib msvcrtd.lib"
@@ -122,19 +121,16 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath="..\..\testTexture\src\main.cpp">
+				RelativePath="..\..\volrendCG\src\main.cpp">
 			</File>
 			<File
-				RelativePath="..\..\testTexture\src\testapp.cpp">
+				RelativePath="..\..\volrendCG\src\testapp.cpp">
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
-			<File
-				RelativePath="..\..\testTexture\src\testapp.h">
-			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
