Added shader manager

--- a/trunk/frameworkedGL/VSNet/frameworkGL/frameworkGL.vcproj
+++ b/trunk/frameworkedGL/VSNet/frameworkGL/frameworkGL.vcproj
@@ -101,188 +101,214 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
-			<File
-				RelativePath="..\..\framework\src\framework\application.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\camera.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\fbo.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\font.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\glext.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\image.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\imageloader.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\imageloader_dat.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\light.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\material.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\mesh.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\object3d.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\pbuffer.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\pixelformat.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\renderer.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\ressourcemanager.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\shader.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\shaderCG.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texture.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texture2d.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texture3d.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texturemanager.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\textureunit.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\framework\timer.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\trackball.cpp">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\vertexbuffer.cpp">
-			</File>
+			<Filter
+				Name="opengl"
+				Filter="">
+				<File
+					RelativePath="..\..\framework\src\opengl\camera.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\fbo.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\font.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\glext.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\image.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\imageloader.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\imageloader_dat.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\light.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\material.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\mesh.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\object3d.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\pbuffer.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\pixelformat.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\renderer.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\ressourcemanager.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\shader.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\shaderCG.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\shadermanager.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texture.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texture2d.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texture3d.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texturemanager.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\textureunit.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\trackball.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\vertexbuffer.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="framework"
+				Filter="">
+				<File
+					RelativePath="..\..\framework\src\framework\application.cpp">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\framework\timer.cpp">
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
-			<File
-				RelativePath="..\..\framework\src\framework\application.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\camera.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\framework\exception.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\fbo.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\font.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\glext.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\image.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\imageloader.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\imageloader_dat.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\light.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\material.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\math\matrix.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\mesh.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\object3d.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\pbuffer.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\pixelformat.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\math\quaternion.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\renderer.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\ressourcemanager.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\shader.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\shaderCG.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texture.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texture2d.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texture3d.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\texturemanager.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\textureunit.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\framework\timer.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\trackball.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\math\utils.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\math\vector2.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\math\vector3.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\vertex.h">
-			</File>
-			<File
-				RelativePath="..\..\framework\src\opengl\vertexbuffer.h">
-			</File>
+			<Filter
+				Name="opengl"
+				Filter="">
+				<File
+					RelativePath="..\..\framework\src\opengl\camera.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\fbo.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\font.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\glext.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\image.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\imageloader.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\imageloader_dat.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\light.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\material.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\mesh.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\object3d.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\pbuffer.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\pixelformat.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\renderer.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\ressourcemanager.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\shader.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\shaderCG.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\shadermanager.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texture.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texture2d.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texture3d.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\texturemanager.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\textureunit.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\trackball.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\vertex.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\vertexbuffer.h">
+				</File>
+			</Filter>
+			<Filter
+				Name="math"
+				Filter="">
+				<File
+					RelativePath="..\..\framework\src\math\matrix.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\math\quaternion.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\math\utils.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\math\vector2.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\math\vector3.h">
+				</File>
+			</Filter>
+			<Filter
+				Name="framework"
+				Filter="">
+				<File
+					RelativePath="..\..\framework\src\framework\application.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\framework\exception.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\framework\timer.h">
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Resource Files"
