Improve scons files

--- a/trunk/frameworkedGL/framework/SConscript
+++ b/trunk/frameworkedGL/framework/SConscript
@@ -21,6 +21,7 @@ src_opengl="""src/opengl/camera.h
               src/opengl/imageloader.h
               src/opengl/imageloader_dat.h
               src/opengl/pixelformat.h
+              src/opengl/geometricbatch.h
               src/opengl/fbo.h
               src/opengl/ressourcemanager.h
               src/opengl/singleton.h
