--- a/trunk/frameworkedGL/framework/src/SConscript
+++ b/trunk/frameworkedGL/framework/src/SConscript
@@ -15,6 +15,7 @@ src_opengl="""opengl/light.cpp
        opengl/ressourcemanager.cpp
        opengl/texturemanager.cpp
        opengl/shadermanager.cpp
+       opengl/geometricbatch.cpp
        opengl/fbo.cpp
        opengl/trackball.cpp
        opengl/texture.cpp
