--- a/trunk/frameworkedGL/SConstruct
+++ b/trunk/frameworkedGL/SConstruct
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-import sys
+import sys, os
 
 sdl_env = Environment()
 freetype_env = Environment()
@@ -9,19 +9,20 @@ if sys.platform == 'linux2' or sys.platform == 'linux-i386':
 	z_lib = ['z']
 	z_libpath = ['/usr/lib']
 	z_include = ['/usr/include']
-	#Framework
-	framework_lib = ['frameworkGL']
-	framework_libpath = ['#lib']
-	framework_include = ['#include']
 
 env = Environment(TARGS=COMMAND_LINE_TARGETS,
 		  tools=['default', 'generic', 'opengl', 'cg', 
 			 'sdl', 'sdl_image', 'freetype'],
 		  toolpath=['.', 'admin']
 		 )
-env.Append(CPPPATH = framework_include+z_include)
-env.Append(LIBS = framework_lib+z_lib)
-env.Append(LIBPATH = framework_libpath+z_libpath)
+#Framework installation path
+framework_lib = ['frameworkGL']
+framework_libpath = [os.path.join(env['PREFIX'],'lib')]
+framework_include = [os.path.join(env['PREFIX'],'include')]
+
+env.AppendUnique(CPPPATH = framework_include+z_include)
+env.PrependUnique(LIBS = framework_lib+z_lib)
+env.AppendUnique(LIBPATH = framework_libpath+z_libpath)
 
 SConscript('framework/SConscript', exports = 'env')
 #SConscript('reflection/SConscript', exports = 'env')
@@ -31,3 +32,4 @@ SConscript('testTexture/SConscript', exports = 'env')
 SConscript('testCG/SConscript', exports = 'env')
 SConscript('volrend/SConscript', exports = 'env')
 SConscript('volrendCG/SConscript', exports = 'env')
+SConscript('testBatch/SConscript', exports = 'env')
