--- a/trunk/frameworkedGL/framework/SConscript
+++ b/trunk/frameworkedGL/framework/SConscript
@@ -1,4 +1,5 @@
 #!/usr/bin/env python
+import os
 
 #env = Environment()
 Import('env')
@@ -6,7 +7,9 @@ Export('env')
 
 SConscript('src/SConscript')
 
-env.Alias(target="install", source=env.Install(dir="../lib", source="src/libframeworkGL.a"))
+env.Alias(target="install", 
+	  source=env.Install(dir=os.path.join(env['PREFIX'], "lib"),
+			     source="src/libframeworkGL.a"))
 
 #Install include files
 src_math = """src/math/matrix.h
@@ -48,6 +51,11 @@ src_framework="""src/framework/application.h
                  src/framework/exception.h
                  src/framework/timer.h"""
 
-env.Alias(target="install", source=env.Install(dir="../include/math", source=Split(src_math)))
-env.Alias(target="install", source=env.Install(dir="../include/opengl", source=Split(src_opengl)))
-env.Alias(target="install", source=env.Install(dir="../include/framework", source=Split(src_framework)))
+env.Alias(target="install", 
+          source=env.Install(dir=os.path.join(env['PREFIX'],"include/math"),
+	  source=Split(src_math)))
+env.Alias(target="install",
+ 	  source=env.Install(dir=os.path.join(env['PREFIX'],"include/opengl"),
+          source=Split(src_opengl)))
+env.Alias(target="install",
+ 	  source=env.Install(dir=os.path.join(env['PREFIX'],"include/framework"), source=Split(src_framework)))
