--- a/trunk/frameworkedGL/VSNet/frameworkGL/frameworkGL.vcproj
+++ b/trunk/frameworkedGL/VSNet/frameworkGL/frameworkGL.vcproj
@@ -114,6 +114,9 @@
 					RelativePath="..\..\framework\src\opengl\font.cpp">
 				</File>
 				<File
+					RelativePath="..\..\framework\src\opengl\geometricbatch.cpp">
+				</File>
+				<File
 					RelativePath="..\..\framework\src\opengl\glext.cpp">
 				</File>
 				<File
@@ -206,6 +209,9 @@
 				</File>
 				<File
 					RelativePath="..\..\framework\src\opengl\font.h">
+				</File>
+				<File
+					RelativePath="..\..\framework\src\opengl\geometricbatch.h">
 				</File>
 				<File
 					RelativePath="..\..\framework\src\opengl\glext.h">
