--- a/trunk/frameworkedGL/framework/src/SConscript
+++ b/trunk/frameworkedGL/framework/src/SConscript
@@ -1,11 +1,13 @@
 #!/usr/bin/env python
+import sys,os
+
 Import('env')
 env.AppendUnique(CPPPATH=['.', 'math', 'framework', 'opengl'])
+tmpEnv = env.Copy()
+tmpEnv.AppendUnique(CPPPATH=['glew/include'])
 
-#conf = Configure(env)
-#env.ParseConfig('pkg-config --cflags freetype2')
-#env.ParseConfig('sdl-config --cflags')
-#env = conf.Finish()
+#Build glew
+os.system("make -C glew")
 
 src_opengl="""opengl/light.cpp
        opengl/pixelformat.cpp
@@ -29,7 +31,6 @@ src_opengl="""opengl/light.cpp
        opengl/renderer.cpp
        opengl/mesh.cpp 
        opengl/vertexbuffer.cpp
-       opengl/glext.cpp 
        opengl/object3d.cpp 
        opengl/material.cpp 
        opengl/shaderCG.cpp 
@@ -41,4 +42,4 @@ src_framework="""framework/application.cpp
               framework/timer.cpp
               framework/timer.h"""
 
-env.Library('frameworkGL', Split(src_framework)+Split(src_opengl))
+tmpEnv.Library('frameworkGL', Split(src_framework)+Split(src_opengl))
