--- a/trunk/frameworkedGL/VSNet/testBatch/testBatch.vcproj
+++ b/trunk/frameworkedGL/VSNet/testBatch/testBatch.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\framework\src"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="frameworkGL.lib opengl32.lib glu32.lib libfreetype.lib SDL.lib SDL_image.lib SDLmain.lib cg.lib cgGL.lib"
+				AdditionalDependencies="frameworkGL.lib opengl32.lib glu32.lib libfreetype.lib SDL.lib SDL_image.lib SDLmain.lib cg.lib cgGL.lib glew32s.lib"
 				OutputFile="$(OutDir)/testBatch.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\frameworkGL\Debug"
@@ -81,7 +81,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="frameworkGL.lib opengl32.lib glu32.lib libfreetype.lib SDL.lib SDL_image.lib SDLmain.lib cg.lib cgGL.lib"
+				AdditionalDependencies="frameworkGL.lib opengl32.lib glu32.lib libfreetype.lib SDL.lib SDL_image.lib SDLmain.lib cg.lib cgGL.lib glew32s.lib"
 				OutputFile="$(OutDir)/testBatch.exe"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="msvcrt.lib msvcrtd.lib"
