Move tests to tests/

--- a/trunk/frameworkedGL/SConstruct
+++ b/trunk/frameworkedGL/SConstruct
@@ -25,8 +25,8 @@ env.PrependUnique(LIBS = framework_lib+z_lib)
 env.AppendUnique(LIBPATH = framework_libpath+z_libpath)
 
 SConscript('framework/SConscript', exports = 'env')
-SConscript('testTexture/SConscript', exports = 'env')
-SConscript('testCG/SConscript', exports = 'env')
-SConscript('volrend/SConscript', exports = 'env')
-SConscript('volrendCG/SConscript', exports = 'env')
-SConscript('testBatch/SConscript', exports = 'env')
+SConscript('tests/testTexture/SConscript', exports = 'env')
+SConscript('tests/testCG/SConscript', exports = 'env')
+SConscript('tests/volrend/SConscript', exports = 'env')
+SConscript('tests/volrendCG/SConscript', exports = 'env')
+SConscript('tests/testBatch/SConscript', exports = 'env')
